# xml-variety

./: README.md
xml-combi/: xml-combi.cabal
xml-combi/app/: Main.hs
xml-deep/: foo.pairs  normalized.pairs  setup.py  submit_to_google.sh  xmlstm.py
xml-deep/trainer/: xmlstm.py
xml-naive/: Main.java
xml-straightforward/: main.go
xmlgen/: project.clj
xmlgen/src/xmlgen/: core.clj
xmlisp/: CHANGELOG.md  project.clj
xmlisp/src/xmlisp/: core.clj  instaparse.clj  molecules.clj
xmlisp/test/xmlisp/: core_test.clj
